# aks-ai-agent

./: .gitignore  LINKEDIN_POST.md  README.md  lint-fixes.patch  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agent/: __init__.py  config.py  diagnostics.py  documenter.py  main.py  monitor.py  notifier.py  remediation.py
aks-ai-agent/aks-ai-agent/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
aks-ai-agent/aks-ai-agent/.github/workflows/: deploy.yml
aks-ai-agent/aks-ai-agent/agent/: main.py  monitor.py  notifier.py
aks-ai-agent/aks-ai-agent/config/: config.yaml
aks-ai-agent/aks-ai-agent/k8s/: rbac.yaml
aks-ai-agent/aks-ai-agent/scripts/: create-secrets.sh
config/: config.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  pvc.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
k8s/: deployment.yaml  pvc.yaml  secret.yaml
scripts/: azure-cleanup.sh  setup.sh
tests/: test_monitor.py
